--- a/env.yml
+++ b/env.yml
@@ -1,6 +1,7 @@
 name: YOLOSD
 channels:
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
@@ -20,8 +21,24 @@ dependencies:
   - setuptools=68.0.0=py311h06a4308_0
   - sqlite=3.41.2=h5eee18b_0
   - tk=8.6.12=h1ccaba5_0
-  - tzdata=2023c=h04d1e81_0
   - wheel=0.41.2=py311h06a4308_0
   - xz=5.4.2=h5eee18b_0
   - zlib=1.2.13=h5eee18b_0
+  - pip:
+      - contourpy==1.2.0
+      - cycler==0.12.1
+      - fonttools==4.44.0
+      - kiwisolver==1.4.5
+      - matplotlib==3.8.1
+      - nibabel==5.1.0
+      - numpy==1.26.1
+      - opencv-python==4.8.1.78
+      - packaging==23.2
+      - pandas==2.1.2
+      - pillow==10.1.0
+      - pyparsing==3.1.1
+      - python-dateutil==2.8.2
+      - pytz==2023.3.post1
+      - six==1.16.0
+      - tzdata==2023.3
 prefix: /home/hprairie/miniconda3/envs/YOLOSD
